<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="@dimen/title_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/PLANNED_TRAVEL_title"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/carInfos"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/busInfo"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carInfos" />

    <TextView
        android:id="@+id/carInfo"
        android:layout_width="@dimen/textView_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busInfo" />

    <Button
        android:id="@+id/goToTravelHelper"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:onClick="goToTravelHelper"
        android:text="@string/GO_TO_TRAVEL_HELPER"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carInfo" />

    <Button
        android:id="@+id/goToRefuelList"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:onClick="goToListRefuel"
        android:text="@string/GO_TO_LIST_REFUEL"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carInfo" />



</android.support.constraint.ConstraintLayout>